Fix overflow and scroll bugs on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,18 @@ html,
 body {
 	margin: 0;
 	height: 100%;
-	overflow: hidden;
+	overflow: hidden !important;
+}
+
+#viewport {
+    position: fixed;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100vh;
+    width: 100vw;
+    -webkit-overscroll-behavior: none;
+    overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
 }
 
 * {
@@ -15,4 +26,9 @@ body {
 
 .sans-serif {
 	font-family: 'Lato', sans-serif;
+}
+
+section {
+	min-width: 100vw;
+	min-height: 100vh;
 }
